Added content to learn sections and removed /learn route index file

--- a/src/contents/learn/introduction/index.mdx
+++ b/src/contents/learn/introduction/index.mdx
@@ -1,7 +1,10 @@
 ---
-title: "Actual Introduction"
-description: "The section is where the actual intro goes"
+title: "Introduction"
+description: "Quick overview of online betting and basics of reading a betting slip"
 ---
 
-## Really Getting Started Now
-test
+## Sportsbooks
+
+## Bets
+
+## Betting Slip
