--- a/src/contents/learn/resources/index.mdx
+++ b/src/contents/learn/resources/index.mdx
@@ -4,4 +4,35 @@ description: "This section provides a list of resources to learn more about onli
 ---
 
 ## Resources
-resource 1
+Sports betting is filled with numbers, statistics, and "lines". Professionals must take
+advantage of "weak lines" using a combination of experience and research. Luckily, the
+community of online betting has grown considerably and amassed countless articles documenting
+their wins and losses. Visit some of the resources listed below if you're interested in learning
+how the pros think.
+
+### Doc Sports
+Sport betting Unit System and Money Management
+
+https://www.docsports.com/service/sports-betting-unit-system-money-management.html
+
+Sports Betting 101
+
+https://www.docsports.com/sports-betting-101.html
+
+Articles on Soccer Bets and Handicaps
+
+https://www.docsports.com/archives/soccer-betting-and-handicapping/
+
+### Action Network
+Betting Calculator
+
+https://www.actionnetwork.com/betting-calculators/betting-odds-calculator
+
+### DraftKings
+How to bet
+
+https://sportsbook.draftkings.com/help/how-to-bet
+
+How to read odds
+
+https://sportsbook.draftkings.com/help/how-to-bet-reading-odds
