--- a/src/contents/learn/terminology/index.mdx
+++ b/src/contents/learn/terminology/index.mdx
@@ -1,8 +1,57 @@
 ---
 title: "Terminology"
-description: "This section provides a list of terms and their definitions"
+description: "A reference for terms, concepts, and lingo used in online sports betting"
 ---
 
+## Overview
+Here you'll find a handy reference to many important and commonly used phrases with examples to demonstrate their usage.
+Getting used to all the different terminology and lingo used in online betting can take some time,
+
 ## Terms
-term 1
-term 2
+
+### Total
+Related to the amount of goals scored in a game.
+Two options: Over or Under
+1. Over: To bet on the amount of goals to be over a threshold
+2. Under: To bet on the amount of goals to be under a threshold
+```
+The 2022 World Cup final had a "Total" of approx. 2.5. Person A places a bet on the Over,
+meaning they predict that the total number of goals (**not** including penalties) will be
+over 2.5. Because partial goals do not exist in Soccer, that means the total number of goals
+must be 3 or greater. The actual final score was 3 - 3, with Argentina winning the penalty
+shoot-out 4-to-2. Thus the "Total" score of the game was 3 + 3 = 6, thus Person A would win
+their bet.
+
+In the event that the "Total" is an amount that can be exactly reached in the game, then
+the bet is considered void or a "Push". This means that all betters would receive their
+original bets back. In our example, if the "Total" had been 6, then Person A would receive
+their original bet back, as the goals scored in the penatly shootout do not count toward
+the "Total".
+```
+
+
+Calculation of the profits is explained in the "Payouts" sections.
+
+### Spread
+Related to the *performance* of a team, relative to their perception as the "underdogs" or
+"favorites" leading into the match. Performance in this case, refers to the margin-of-victory,
+or goal differential, of the winning team.
+Two options: 
+1. (+) Favorites "cover the spread"
+2. (-) Favorites fail to "cover the spread"
+The "Spread" is represented as a number, such as 0.25 or 1, and represents the difference
+between number of goals by the favorites and underdogs (**not** including penalties).
+```
+The 2022 World Cup final had a "Spread" of approx. 0.25, with France (FRA) considered the favorites
+and Argentina (ARG) the underdogs. Persona A placed a bet on the +0.25 spread, meaning they predict
+that FRA will score 0.25 more goals than ARG. Partial goals don't exist in Soccer, so FRA would need
+to score 1 or more goals in order to "cover the spread". The final score was 3 - 3, thus the
+margin-of-victory or goal differential was 0. As FRA failed to "cover the spread", person A would have
+lost their bet and received nothing.
+
+In the event that the "Spread" is an amount that can be exactly reached in the game, then
+it would be considered a failure to "cover the spread". This is due to the fact that the 
+goal differential be strictly greater than the "Spread", thus betting on the (-) "Spread" has
+slightly more conditions of succeeding.
+
+Calculation of profits is explained in the "Calculating Payouts" sections.
